# ShareGo

./: .gitignore  .npmrc  .prettierignore  .prettierrc  BUILD.md  BUILD_SYSTEM_REVIEW.md  CODE_OF_CONDUCT.md  CRITICAL_REVIEW.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.cursor/rules/: sharego-config.mdc  sharego-i18n.mdc  sharego-project.mdc  sharego-protocol.mdc  sharego-security.mdc  sharego-session.mdc  sharego-typescript.mdc  ui-parity.mdc  version-bump.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/app/: .detoxrc.js  index.html  index.js  metro.config.js  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop-tauri/: CRITICAL_REVIEW.md  index.html  package.json  tsconfig.json  (+1 more)
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  ws_server.rs
core/: package.json  vitest.config.ts
docs/: ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  IOS_GUIDE.md  PROTOCOL.md  REJECTED.md  THREAT_MODEL.md
scripts/: build-android.sh  build-core.sh  build-desktop.sh  build-ios.sh  check.sh  dev-ios.sh  generate-crypto-vectors.mjs  generate-icons.mjs  preflight.sh  setup.sh  sync-version.mjs  verify-cross-platform-kx.mjs
(+155 files in other folders)
