[package]
name = "sharego-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "sharego_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
local-ip-address = "0.6"
base64 = "0.22"
socket2 = "0.5"
